--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,5 @@
 ---
  en:
-  do_subscribe_to_our_mailing_list: Join our newsletter!
+  do_subscribe_to_our_mailing_list: "Join our newsletter!"
+  mailchimp_settings: "MailChimp Settings"
+  mailchimp_settings_description: "Configure MailChimp settings"
